@@ -97,6 +97,7 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.time.format=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
